styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
html,
body {
  padding: 0;
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, */
  /*   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  font-family: "Nunito", sans-serif;
  background-color: #292d3e;
  color: #a6accd;
  font-size: large;
}

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: #82aaff;
}

/* footer { */
/*   /1* background-color: rgba(24, 26, 27, 0.2); *1/ */
/*   position: relative; */
/*   /1* left: 0; *1/ */
/*   bottom: 0; */
/*   width: 100%; */
/*   text-align: center; */
/*   /1* border-top: 1px solid #ddd; *1/ */
/* } */

h1 {
  text-align: center;
}

Image {
  background-color: white;
}

pre code {
  background: inherit;
  border-left: 3px solid grey;
  page-break-inside: avoid;
  font-family: monospace;
  font-size: inherit;
  line-height: 1.6;
  margin-bottom: 1.6em;
  max-width: 100%;
  overflow: auto;
  padding: 0.3em 1.5em;
  display: block;
  word-wrap: break-word;
}

.blogContent,
.mwili {
  max-width: 95%;
  margin: 0 auto;
}
.toggle-button {
  position: absolute;
  top: 0.75rem;
  right: 1rem;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 21px;
}

.toggle-button .bar {
  height: 3px;
  width: 100%;
  background-color: white;
}

.navbar-links ul {
  list-style-type: none;
}

@media (max-width: 700px) {
  .toggle-button {
    display: flex;
  }
  .navbar-links {
    width: 100%;
    display: none;
  }
  nav {
    flex-direction: column;
    align-items: flex-start;
  }
  .navbar-links ul {
    list-style-type: none;
    flex-direction: column;
    width: 100%;
  }
  .navbar-links li {
    text-align: center;
  }
  .navbar-links-active {
    display: flex;
  }
}

